AWS/Resources/EKS/hands-on-learning/参考資料_未使用/nginx-ingress-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-ingress
  template:
    metadata:
      labels:
        app: simple-ingress
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
          hostPort: 80
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: config
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: simple-ingress-service
spec:
  selector:
    app: simple-ingress
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
